--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://gitlab.com/thekesolutions/plugins/koha-plugin-slnp-ill.git"
+    "url": "https://github.com/BSZBW/koha-plugin-slnp-ill.git"
   },
   "author": "Tomás Cohen Arazi <tomascohen@theke.io>",
   "license": "GPL-3.0",
   "bugs": {
-    "url": "https://gitlab.com/thekesolutions/plugins/koha-plugin-slnp-ill/issues"
+    "url": "https://github.com/BSZBW/koha-plugin-slnp-ill/issues"
   },
-  "homepage": "https://gitlab.com/thekesolutions/plugins/koha-plugin-slnp-ill#readme",
+  "homepage": "https://github.com/BSZBW/koha-plugin-slnp-ill#readme",
   "dependencies": {
     "datetime": "0.0.3",
     "jsonfile": "^5.0.0",
